...
    balanceDetailedViewModel: BalanceDetailedViewModel
) {

  val budgetState by budgetDetailedViewModel.uiState.collectAsState()
  val balanceState by balanceDetailedViewModel.uiState.collectAsState()
  val statusList: List<String> = listOf("All Status") + Status.entries.map { it.name }
  val tvaList: List<String> = listOf("HT", "TTC")

  Scaffold(
      topBar = {
        CenterAlignedTopAppBar(
            title = {
              Text(text = subCategory!!.name, style = MaterialTheme.typography.titleLarge)
            },
            navigationIcon = {
              IconButton(
                  onClick = { navigationActions.back() },
                  modifier = Modifier.testTag("backButton")) {
                    Icon(Icons.AutoMirrored.Filled.ArrowBack, contentDescription = "Back")
                  }
            },
            actions = {
              IconButton(
                  onClick = {
...
                    if (page == AccountingPage.BALANCE && subCategory != null) {
                      balanceDetailedViewModel.startSubCategoryEditingInBalance()
                    } else if (page == AccountingPage.BUDGET && subCategory != null) {
                      budgetDetailedViewModel.startSubCategoryEditingInBudget()
                    }
                  },
                  modifier = Modifier.testTag("editSubCat")) {
                    Icon(Icons.Outlined.Edit, contentDescription = "Edit")
                  }
            })
      },
      contentWindowInsets = WindowInsets(20.dp, 20.dp, 20.dp, 0.dp),
      modifier = Modifier.fillMaxWidth().testTag("AccountingDetailedScreen"),
      floatingActionButton = {
        FloatingActionButton(
            modifier = Modifier.testTag("createNewItem"),
            containerColor = MaterialTheme.colorScheme.surface,
            contentColor = MaterialTheme.colorScheme.primary,
            onClick = {
              when (page) {
                AccountingPage.BUDGET -> budgetDetailedViewModel.startCreating()
                AccountingPage.BALANCE -> balanceDetailedViewModel.startCreation()
...
        }

        LazyColumn(
            modifier = Modifier.fillMaxWidth().padding(innerPadding),
        ) {
          item {
            Row(Modifier.testTag("filterRowDetailed").horizontalScroll(rememberScrollState())) {
              // Status filter for balance Items
              if (page == AccountingPage.BALANCE) {
                DropdownFilterChip(statusList.first(), statusList, "statusListTag") {
                  balanceDetailedViewModel.onStatusFilter(
                      it.takeIf { it != "All Status" }?.let { Status.valueOf(it) })
                }
              }

              // Tva filter
              DropdownFilterChip(tvaList.first(), tvaList, "tvaListTag") {
                balanceDetailedViewModel.modifyTVAFilter(it == "TTC")
                budgetDetailedViewModel.modifyTVAFilter(it == "TTC")
              }
            }
          }
          // Display the items
...
 *
 * @param totalAmount: The total amount of the subcategory
 */
@Composable
fun TotalItems(totalAmount: Int) {
  ListItem(
      modifier = Modifier.fillMaxWidth().testTag("totalItems"),
      headlineContent = {
        Text(
            text = "Total",
            style = MaterialTheme.typography.bodyLarge.copy(fontWeight = FontWeight.Bold))
      },
      trailingContent = {
...
