...
      onDismissRequest = {
        if (budgetModel.editing) budgetViewModel.cancelEditing()
        else budgetViewModel.cancelCreating()
      }) {
        Card(
            modifier =
                Modifier.padding(vertical = 16.dp, horizontal = 8.dp).testTag("editDialogBox"),
            shape = RoundedCornerShape(16.dp),
        ) {
          LazyColumn(
              horizontalAlignment = Alignment.CenterHorizontally,
              modifier = Modifier.padding(8.dp).testTag("editDialogColumn")) {
                item {
...
                                    .testTag("editSubCategoryCancelButton"))
                      }
                }
                item {
                  OutlinedTextField(
                      singleLine = true,
                      modifier = Modifier.padding(8.dp).testTag("editNameBox"),
                      value = nameString,
                      isError = budgetModel.titleError,
                      onValueChange = {
                        nameString = it
                        budgetViewModel.setTitle(it)
                      },
...
                        if (budgetModel.titleError) Text(budgetModel.titleErrorString)
                      })
                }
                item {
                  OutlinedTextField(
                      singleLine = true,
                      modifier = Modifier.padding(8.dp).testTag("editAmountBox"),
                      value = amountString,
                      isError = budgetModel.amountError,
                      onValueChange = {
                        amountString = it
                        budgetViewModel.setAmount(it)
                      },
...
                      modifier = Modifier.fillMaxWidth().padding(8.dp),
                      horizontalArrangement = Arrangement.End,
                  ) {
                    if (budgetModel.editing) {
                      TextButton(
                          onClick = { budgetViewModel.deleteEditing() },
                          modifier = Modifier.testTag("deleteButton"),
                      ) {
                        Text("Delete", color = MaterialTheme.colorScheme.error)
                      }
                    }
                    TextButton(
                        onClick = {
...
                                    tva = TVA.floatToTVA(tvaString.toFloat()),
                                    description = descriptionString,
                                    subcategoryUID = budget.subcategoryUID,
                                    year = budgetModel.subCategory!!.year))
                          }
                        },
                        modifier = Modifier.testTag("editConfirmButton"),
                    ) {
                      Text("Confirm")
                    }
                  }
                }
              }
...
